UCF-APR2.4/ftr main/force-app/main/default/objects/Menu_Line__c/Menu_Line__c.object-meta.xml
<CustomObject>
    <label>Menu Line</label>
    <nameField>
        <label>Menu Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Menu Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>