UCF-APR2.4/ftr main/force-app/main/default/objects/Menu_Line__c/fields/Destination_Info__c.field-meta.xml
<CustomField>
    <fullName>Destination_Info__c</fullName>
    <label>Destination Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>