UCF-APR2.4/ftr main/force-app/main/default/objects/Menu_Line__c/fields/Menu__c.field-meta.xml
<CustomField>
    <fullName>Menu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Menu</label>
    <referenceTo>Menu__c</referenceTo>
    <relationshipLabel>Menu Lines</relationshipLabel>
    <relationshipName>Menu_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>