UCF-APR2.4/ftr main/force-app/main/default/objects/Menu_Line__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <label>Number</label>
    <length>2</length>
    <type>Text</type>
</CustomField>