UCF-APR2.4/ftr main/force-app/main/default/objects/Menu_Line__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <label>Options</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Options_for_Menu_Line</valueSetName>
    </valueSet>
</CustomField>