UCF-APR2.4/ftr main/force-app/main/default/objects/Menu_Line__c/fields/Sub_Menu__c.field-meta.xml
<CustomField>
    <fullName>Sub_Menu__c</fullName>
    <label>Sub Menu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>